--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:styles": "npx @tailwindcss/cli -i ./assets/input.css -o ./assets/output.css --watch --minify",
     "preview": "vite preview"
   },
   "devDependencies": {
     "vite": "^7.0.4"
   },
   "dependencies": {
+    "@tailwindcss/cli": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
     "tailwindcss": "^4.1.11"
   },
